# NanoPyx

./: .appveyor.yml  .coveragerc  .disabled_appveyor.yml  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  TODOS.TXT  dockerfile  esrrf_profiling.py  essrf_profiling.py  logo_ascii.txt  noxfile.py  pyproject.toml  requirements.txt  runBuildTools.py  runDockerTools.py  runNoxTools.py  runUpdateBuildNumber.py  setup.cfg  setup.py  t.ipynb  test.py 09-40-22-710.py  test_wheel.sh  tox.ini
.coding_suggestions/: .pre-commit-config_copy.yaml
.coding_suggestions/.vscode_copy/: c_cpp_properties.json  settings.json
.docker/gha_runners/: build.sh  dockerfile_py310  dockerfile_py311  dockerfile_py38  dockerfile_py39  dockerfile_ubuntu  requirements.txt  run_py310.sh  run_py311.sh  run_py38.sh  run_py39.sh  run_ubuntu.sh
.github/: create_runner.sh  dependabot.yml  pr-prefix-labeler.yml  requirements.txt
.github/.old/: deploy_package.yml  labeler.yml
.github/workflows/: build_cython_extensions.yml  build_deploy_docs.yml  build_docker_image.yml  build_docs.yml  build_docs_test.yml  build_linux.yml  build_test_deploy_all_wheels.yml  build_wheels.yml  buildtest_mac_arm_wheels.yml  buildtest_mac_x86.yml  buildtest_mac_x86_local.yml  buildtest_manylinux_wheels.yml  buildtest_wheels.yml  buildtest_wheels_mac_arm.yml  buildtest_wheels_manylinux.yml  buildtest_windows_mac_x86_wheels.yml  buildtest_windows_x86.yml  dependabot.yml  deploy_package.yml  docker-image.yml  docs.yml  dummy.yml  generate_gource.yml  labeler.yml  nanopyx_doctor.yml  nanopyx_night_mechanic.yml  nanopyx_oncall_all_os.yml  nanopyx_oncall_mechanic.yml  nanopyx_ubuntu_testing.yml  python-package-test.yml  test_build.yml  test_package.yml  test_package_local.yml  ubuntu_wheel_maker.yml
build_tools/: build_libomp.sh
docs/: CNAME  index.html  nanopyx.html  search.js
docs/nanopyx/: core.html  data.html  methods.html
include/: _c_catmull_rom.c  _c_catmull_rom.h
napari_plugin/napari-enanoscopy/: README.md  pyproject.toml  setup.cfg  tox.ini
napari_plugin/napari-enanoscopy/src/napari_enanoscopy/: channel_alignment.py  drift_alignment.py  main.py  napari.yaml
napari_plugin/napari-enanoscopy/src/napari_enanoscopy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
notebooks/: ChannelRegistration.ipynb  DriftCorrection.ipynb  ExampleDataSRRFandQC.ipynb  LiquidEngineBenchmarking.ipynb  LiquidEngineImplementationExample.ipynb  NanoPyxExampleTutorial.ipynb  NonLocalMeansDenoising.ipynb  ParamSweepandeSRRF.ipynb  RadialGradientConvergence.ipynb  Run_times_data.ipynb  SRMetrics.ipynb  SRRF.ipynb  SRRFandQC.ipynb  drift_correction_notebook.ipynb  eSRRFandQC.ipynb  myliquidengineclass.py  simulSR.ipynb
notebooks/tests/: RCC.ipynb  download_example_data.ipynb  errorMap.ipynb  error_map.ipynb  image_magnify.ipynb  image_shift.ipynb  randomNoise.ipynb  random_noise.ipynb  srrf.ipynb
notebooks/workshops/: I2K24.ipynb  myliquidengine.py
src/eNanoScoPy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/enanoscopy/: __init__.py
src/include/: _c_calculate_distance_weight.c  _c_calculate_distance_weight.h  _c_catmull_rom.c  _c_catmull_rom.h  _c_gradients.c  _c_gradients.h  _c_integral_image.c  _c_integral_image.h  _c_integral_to_distance.c  _c_integral_to_distance.h  _c_interpolation_bicubic.c  _c_interpolation_bicubic.h  _c_interpolation_bilinear.c  _c_interpolation_bilinear.h  _c_interpolation_catmull_rom.c  _c_interpolation_catmull_rom.h  _c_interpolation_lanczos.c  _c_interpolation_lanczos.h  _c_interpolation_nearest_neighbor.c  _c_lanczos.c  _c_lanczos.h  (+11 more)
tests/: _le_interpolation.mako.cl  conftest.py  test_assemble_from_blocks.py  test_beads_generation.py  test_benchmarking.py  test_binning.py  test_channel_registration.py  test_cl.py  test_conv2d.py  test_cropping.py  test_data_downloader.py  test_decorr_analysis.py  test_drift_alignment.py  test_drift_alignment_3d.py  test_easy_gui.py  test_error_map.py  test_esrrf.py  test_esrrf3d.py  test_example_data_download.py  test_fft.py  test_frc.py  test_image_logpolar.py  test_image_polar.py  test_image_rotation.py  test_image_shift.py  test_image_shift_rotation.py  test_io.py  test_liquid.py  test_magnify.py  test_make_even_square.py  test_mandelbrot.py  test_noise.py  test_noise_add_gaussians.py  test_open_simplex_2F.py  test_open_simplex_2S.py  test_opencl.py  test_package_level_calls.py  test_padding.py  test_parameter_sweep.py  test_radiality.py  (+13 more)
wheelhouse/: Cython-0.29.33-py2.py3-none-any.whl  Mastodon.py-1.8.0-py2.py3-none-any.whl  Pillow-9.4.0-2-cp311-cp311-macosx_10_10_x86_64.whl  PyYAML-6.0-cp311-cp311-macosx_10_9_x86_64.whl  asteval-0.9.28-py3-none-any.whl  beautifulsoup4-4.11.2-py3-none-any.whl  blurhash-1.1.4-py2.py3-none-any.whl  charset_normalizer-3.0.1-cp311-cp311-macosx_10_9_x86_64.whl  contourpy-1.0.7-cp311-cp311-macosx_10_9_x86_64.whl  coverage-7.1.0-cp311-cp311-macosx_10_9_x86_64.whl  cycler-0.11.0-py3-none-any.whl  execnet-1.9.0-py2.py3-none-any.whl  filelock-3.9.0-py3-none-any.whl  fonttools-4.38.0-py3-none-any.whl  future-0.18.3-py3-none-any.whl  gdown-4.6.0-py3-none-any.whl  icdiff-2.0.6-py3-none-any.whl  imageio-2.25.0-py3-none-any.whl  kiwisolver-1.4.4-cp311-cp311-macosx_10_9_x86_64.whl  lmfit-1.1.0-py3-none-any.whl  networkx-3.0-py3-none-any.whl  noise-1.2.2-cp311-cp311-macosx_10_9_universal2.whl  onedrivedownloader-1.1.3-py3-none-any.whl  opensimplex-0.4.4-py3-none-any.whl  pprintpp-0.4.0-py2.py3-none-any.whl  pytest-7.2.1-py3-none-any.whl  pytest_clarity-1.0.1-py3-none-any.whl  pytest_cov-4.0.0-py3-none-any.whl  pytest_cython-0.2.0-py2.py3-none-any.whl  pytest_emoji-0.2.0-py3-none-any.whl  pytest_icdiff-0.6-py3-none-any.whl  pytest_plt-1.1.0-py3-none-any.whl  pytest_sugar-0.9.6-py2.py3-none-any.whl  pytest_timeout-2.1.0-py3-none-any.whl  pytest_xdist-3.1.0-py3-none-any.whl  python_magic-0.4.27-py2.py3-none-any.whl  rich-13.3.1-py3-none-any.whl  termcolor-2.2.0-py3-none-any.whl  tifffile-2023.2.3-py3-none-any.whl  uncertainties-3.1.7-py2.py3-none-any.whl  (+1 more)
(+647 files in other folders)
