[build-system]
requires = [
    "setuptools>=42",
    "wheel>=0.38.4",
    "cython>=0.29.0",
    "numpy>=1.19.0",
]
build-backend = "setuptools.build_meta"

[project]
# For an example see REF: https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "nanopyx"
version = "0.0.1"
description = "Nanoscopy Python library (NanoPyx, the successor to NanoJ) - focused on light microscopy and super-resolution imaging"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
keywords = [
    "NanoJ",
    "Super-Resolution Microscopy",
    "Fluorescence",
    "BioImage Analysis",
]
authors = [
    { name = "Ricardo Henriques", email = "ricardo.jv.henriques@gmail.com" },
    { name = "Bruno Saraiva", email = "bruno.msaraiva2@gmail.com" },
    { name = "Inês Cunha", email = "inescunha200@gmail.com" },
]
maintainers = [{ name = "Bruno Saraiva", email = "bruno.msaraiva2@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "cython>=0.29.32",
    "numpy>=1.22",
    "scipy>=1.8",
    "tifffile>=2022.5.4",
    "scikit-image>=0.19.2",
    "noise>=1.2.2",
    "opensimplex>=0.4.4",
    "pyyaml>=6.0",
    "wget>=3.2",
    "onedrivedownloader>=1.1.3",
    "tqdm>=4.64.1",
    "lmfit>=1.1.0",
    "opencv-python>=4.7.0.68",
]

[project.optional-dependencies]
test = [
    "pytest >= 7.1",
    "pytest-cov >= 4.0.0",
    "pytest-emoji >= 0.2.0",
    "pytest-icdiff >= 0.6",    # https://github.com/hjwp/pytest-icdiff
    "pytest-clarity >= 1.0.1", # https://pypi.org/project/pytest-clarity/
    "pytest-timeout >= 2.1.0",
    "pytest-plt >= 1.1.0",
    "pytest-xdist >= 3.1.0",
    "pytest-sugar >= 0.9.6",
    "pytest-cython >= 0.2.0",
    "nbmake >= 1.3.5",
]
jupyter = [
    "nbformat>=4.2.0",
    "matplotlib>=3.5",
    "seaborn>=0.12.1",
    "stackview>=0.5.1",
    # "plotly>=5.11.0",
    "celluloid>=0.2.0", # https://towardsdatascience.com/the-simplest-way-of-making-gifs-and-math-videos-with-python-aec41da74c6e
    "jupyterlab>=3.5.3"
]
doc = ["pdoc>=12.3.1"]

developer = ["pyx2pxd>=0.1.1", "mastodon.py>=1.8.0"]

[project.urls]
#homepage = "https://example.com"
#documentation = "https://readthedocs.org"
repository = "https://github.com/HenriquesLab/NanoPyx"
#changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
bug_tracker = "https://github.com/HenriquesLab/NanoPyx/issues"

[tool.pyright]
reportUndefinedVariable = false

[tool.pytest.ini_options]
addopts = "--emoji --cov=nanopyx -n=auto --plots --nbmake --doctest-modules --doctest-cython --ignore-glob=run*Tools.py --ignore=setup.py --ignore=notebooks/"
timeout = 240
plt_dirname = "tests_plots"
doctest_encoding = "latin1"

[tool.flake8]
# https://pypi.org/project/Flake8-pyproject/
filename = ["*.pyx", "*.px*"]
exclude = [".eggs", "*.egg,build"]
ignore = ["E901", "E225", "E226", "E227"]
