[metadata]
name = eNanoScoPy
version = 0.0.1
author = #
author_email = #
description = Enhanced Nanoscopy library for Python (eNanoScoPy, the successor to NanoJ) - focused on light microscopy and super-resolution imaging
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject # placeholder
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues # placeholder
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE
[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6
install_requires =
    setuptools >= 42
    numpy >= 1.22
    scipy >= 1.8
    tifffile >= 2022.5.4
    pytest >= 7.1
    matplotlib >= 3.5
    scikit-image >= 0.19.2

[options.packages.find]
where = src