[metadata]
name = nanopyx
version = 0.0.1
author = #
author_email = #
description = Nanoscopy Python library (NanoPyx, the successor to NanoJ) - focused on light microscopy and super-resolution imaging
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject # placeholder
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues # placeholder
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE
[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6
install_requires =
    setuptools >= 42
    # virtualenvwrapper >= 4.8.4
    cython >= 0.29.32
    wheel >= 0.38.4
    numpy >= 1.22
    scipy >= 1.8
    pandas >= 1.5.2
    numba >= 0.56.4
    tifffile >= 2022.5.4
    pytest >= 7.1
    matplotlib >= 3.5
    seaborn >= 0.12.1
    scikit-image >= 0.19.2
    # napari[all] # unsure if we really need this
    # napari-matplotlib >= 0.2.1
    plotly >= 5.11.0
    nbformat >= 4.2.0 # needed for plotly
    noise >= 1.2.2
    pyyaml >= 6.0
    wget >= 3.2
    onedrivedownloader >= 1.1.3
    zarr >= 2.13.3
    numcodecs >= 0.4
    tqdm >= 4.64.1 # https://github.com/tqdm/tqdm
    stackview >= 0.3.8 # https://github.com/haesleinhuepf/stackview
    lmfit >= 1.1.0

[options.packages.find]
where = src
#[options.package_data]
#'nanopyx' = ['data/**/*']

[build_ext]
inplace=1